--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 * {
     color: #ffffff;
     background: #101010;
+    background: #202020;
+    font-family: 'BioRhyme', serif;
+    /* font-family: 'Gravitas One', cursive; */
+    font-family: 'Monoton', cursive;
+    font-family: 'Nothing You Could Do', cursive;
+    /* font-family: 'Rubik', sans-serif; */
 }
 
 /* COLORS */
@@ -100,8 +106,13 @@ nav ul li a:hover {
 }
 
 h1 {
-    font-size: 15vmin;
+    font-size: 10vmin;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'BioRhyme', serif;
+    font-family: 'Gravitas One', cursive;
+    font-family: 'Monoton', cursive;
+    /* font-family: 'Nothing You Could Do', cursive; */
+    /* font-family: 'Rubik', sans-serif; */
     padding: 4vmax 2vmax;
     margin: 0 auto;
     width: 100%;
