--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ header {
     justify-content: space-between;
 }
 
+.burger-btn-active {
+    display: block;
+}
+
 .burger-btn span {
     display: block;
     width: 4vmax;
@@ -53,11 +57,26 @@ header {
     max-height: 5px;
     background: #ff40ff;
     border-radius: 2px;
+    transition: .65s;
+
 }
 
-.burger-btn .second-span {
+.burger-btn span:nth-child(2) {
     width: 3vmax;
     max-width: 27px;
+}
+
+.burger-btn-active span:nth-child(1){
+    transform: rotate(0.125turn);
+}
+
+.burger-btn-active span:nth-child(2) {
+    display: none;
+}
+
+.burger-btn-active span:nth-child(3){
+    transform: rotate(-0.125turn);
+    margin-top: -.65vmax;
 }
 
 nav {
@@ -110,7 +129,7 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-family: 'BioRhyme', serif;
     font-family: 'Gravitas One', cursive;
-    font-family: 'Monoton', cursive;
+    /* font-family: 'Monoton', cursive; */
     /* font-family: 'Nothing You Could Do', cursive; */
     /* font-family: 'Rubik', sans-serif; */
     padding: 4vmax 2vmax;
