--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     background: #101010;
     background: #202020;
     font-family: 'Lato', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     /* font-family: 'Rubik', sans-serif; */
 }
 
