--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     background: #202020;
     font-family: 'Lato', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     /* font-family: 'Rubik', sans-serif; */
 }
 
