--- a/style.css
+++ b/style.css
@@ -131,7 +131,11 @@ h1 {
     max-width: 800px;
 }
 
-.scrolling-links-container {
+p {
+    padding: 0 2vmax;
+}
+
+/* .scrolling-links-container {
     height: 35vmax;
     width: 100%;
     overflow-y: hidden;
@@ -183,7 +187,8 @@ h1 {
 
 #c {
     background-image: url("https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4tf03?ver=cf8b&q=90&m=6&h=705&w=1253&b=%23FFFFFFFF&f=jpg&o=f&p=140&aim=true")
-}
+} */
+
 
 
 footer {
